--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "devDependencies": {
         "@atsumaru/api-types": "github:atsumaru/api-types#master",
-        "cpx": "^1.5.0"
+        "cpx": "^1.5.0",
+        "typescript": "^4.7.4"
     }
 }
